--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <title>goit-js-hw-01</title>
+    <script src="./js/task-1.js" defer></script>
+    <script src="./js/task-2.js" defer></script>
+    <script src="./js/task-3.js" defer></script>
   </head>
   <body></body>
-  <script src="./js/task-1.js"></script>
-  <script src="./js/task-2.js"></script>
-  <script src="./js/task-3.js"></script>
 </html>
